Don't return bogus overflow values when we can't compute a real overflow value.  Bug 319381, r+sr=dbaron